--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="container">
         <div class="class-link">
-            <a href="class_page1.html"><img src="images/hib copy.png" alt="Image 1"></a>
+            <a href="https://ss1mba.github.io/2theam/"><img src="images/hib copy.png" alt="Image 1"></a>
             <a href="class_page1.html">Stephanie</a>
         </div>
         <div class="class-link">
