--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <a href="class_page1.html">Stephanie</a>
         </div>
         <div class="class-link">
-            <a href="class_page2.html"><img src="images/hib2 copy.png" alt="Image 2"></a>
-            <a href="class_page2.html">Go to Class Page 2</a>
+            <a href="https://ramonabeepbop.github.io/noodle1/><img src="images/hib2 copy.png" alt="Image 2"></a>
+            <a href="class_page2.html">Ramona</a>
         </div>
         <div class="class-link">
             <a href="class-page.html"><img src="images/frangi copy.png" alt="Image 3"></a>
