--- a/index.html
+++ b/index.html
@@ -76,54 +76,54 @@
     <h1>𝕷𝖎𝖓𝖐 𝕿𝖔 𝕲𝖔𝖔𝖉 𝕾𝖍𝖎𝖙</h1>
     <div class="video-background">
         <video autoplay loop muted>
-            <source src="images\RPReplay_Final1717973116.mov" type="video/mp4">
+            <source src="images/RPReplay_Final1717973116.mov" type="video/mp4">
             <!-- Add other video formats if needed -->
             Your browser does not support the video tag.
         </video>
     </div>
     <div class="container">
         <div class="class-link">
-            <a href="https://ss1mba.github.io/2theam/"><img src="images/hib copy.png" alt="Image 1"></a>
-            <a href="class_page1.html">Stephanie</a>
+            <a href="https://ss1mba.github.io/2theam/" target="_blank"><img src="images/hib copy.png" alt="Image 1"></a>
+            <a href="https://ss1mba.github.io/2theam/" target="_blank">Stephanie</a>
         </div>
         <div class="class-link">
-            <a href="https://ramonabeepbop.github.io/noodle1/"><img src="images/hib2 copy.png" alt="Image 2"></a>
-            <a href="class_page2.html">Ramona</a>
+            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank"><img src="images/hib2 copy.png" alt="Image 2"></a>
+            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank">Go to Class Page 2</a>
         </div>
         <div class="class-link">
-            <a href="class-page.html"><img src="images/frangi copy.png" alt="Image 3"></a>
-            <a href="class-page.html">Go to Class Page 3</a>
+            <a href="class-page.html" target="_blank"><img src="images/frangi copy.png" alt="Image 3"></a>
+            <a href="class-page.html" target="_blank">Go to Class Page 3</a>
         </div>
         <div class="class-link">
-            <a href="class-page4.html"><img src="images\ppppp (1).png" alt="image 4"></a> 
-            <a href="class-page4.html">Go to Class page 4</a>
+            <a href="class-page4.html" target="_blank"><img src="images/ppppp (1).png" alt="Image 4"></a> 
+            <a href="class-page4.html" target="_blank">Go to Class Page 4</a>
         </div>
     </div>
     <div class="container"> <!-- Second container -->
         <div class="class-link">
-            <a href="class-page5.html"><img src="images/ll.png" alt="image 5"></a> 
-            <a href="class-page5.html">Go to Class page 5</a>
+            <a href="class-page5.html" target="_blank"><img src="images/ll.png" alt="Image 5"></a> 
+            <a href="class-page5.html" target="_blank">Go to Class Page 5</a>
         </div>
         <!-- Add more class links as needed -->
         <div class="class-link">
-            <a href="class-page6.html"><img src="images/pp.png" alt="image 6"></a>
-            <a href="class-page6.html">go to class page 6</a>
+            <a href="class-page6.html" target="_blank"><img src="images/pp.png" alt="Image 6"></a>
+            <a href="class-page6.html" target="_blank">Go to Class Page 6</a>
         </div>
         <div class="class-link">
-            <a href="class-page7.html"><img src="images/hibib.png" alt="image 7"></a>
-            <a href="class-page7.html">go to class page 7</a>
+            <a href="class-page7.html" target="_blank"><img src="images/hibib.png" alt="Image 7"></a>
+            <a href="class-page7.html" target="_blank">Go to Class Page 7</a>
         </div>
         <div class="class-link">
-            <a href="class-page8.html"><img src="images/kkkm.png" alt="image 8"></a>
-            <a href="class-page8.html">go to class page 8</a>
+            <a href="class-page8.html" target="_blank"><img src="images/kkkm.png" alt="Image 8"></a>
+            <a href="class-page8.html" target="_blank">Go to Class Page 8</a>
         </div>
         <div class="class-link">
-            <a href="class-page9.html"><img src="images/Untitled-7.png" alt="image 9"></a>
-            <a href="class-page9.html">go to class page 9</a>
+            <a href="class-page9.html" target="_blank"><img src="images/Untitled-7.png" alt="Image 9"></a>
+            <a href="class-page9.html" target="_blank">Go to Class Page 9</a>
         </div>
         <div class="class-link">
-            <a href="class-page10.html"><img src="images/lpolp.png" alt="image 10"></a>
-            <a href="class-page10.html">go to class page 9</a>  
+            <a href="class-page10.html" target="_blank"><img src="images/lpolp.png" alt="Image 10"></a>
+            <a href="class-page10.html" target="_blank">Go to Class Page 10</a>
         </div>
     </div>
 </body>
