--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         </div>
         <div class="class-link">
             <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank"><img src="images/hib2 copy.png" alt="Image 2"></a>
-            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank">Go to Class Page 2</a>
+            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank">Ramona</a>
         </div>
         <div class="class-link">
-            <a href="class-page.html" target="_blank"><img src="images/frangi copy.png" alt="Image 3"></a>
-            <a href="class-page.html" target="_blank">Go to Class Page 3</a>
+            <a href="https://l1vb.github.io/RepoName/ target="_blank"><img src="images/frangi copy.png" alt="Image 3"></a>
+            <a href="https://l1vb.github.io/RepoName/ target="_blank">Liv</a>
         </div>
         <div class="class-link">
             <a href="class-page4.html" target="_blank"><img src="images/ppppp (1).png" alt="Image 4"></a> 
