--- a/index.html
+++ b/index.html
@@ -91,40 +91,67 @@
             <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank">Ramona</a>
         </div>
         <div class="class-link">
-            <a href="https://l1vb.github.io/RepoName/ target="_blank"><img src="images/frangi copy.png" alt="Image 3"></a>
-            <a href="https://l1vb.github.io/RepoName/ target="_blank">Liv</a>
+            <a href="https://l1vb.github.io/RepoName/" target="_blank"><img src="images/frangi copy.png" alt="Image 3"></a>
+            <a href="https://l1vb.github.io/RepoName/" target="_blank">Liv</a>
         </div>
         <div class="class-link">
-            <a href="class-page4.html" target="_blank"><img src="images/ppppp (1).png" alt="Image 4"></a> 
-            <a href="class-page4.html" target="_blank">Go to Class Page 4</a>
+            <a href="https://millapyne.github.io/final-milla/" target="_blank"><img src="images/ppppp.png" alt="Image 4"></a> 
+            <a href="https://millapyne.github.io/final-milla/" target="_blank">Milla</a>
         </div>
     </div>
     <div class="container"> <!-- Second container -->
         <div class="class-link">
-            <a href="class-page5.html" target="_blank"><img src="images/ll.png" alt="Image 5"></a> 
-            <a href="class-page5.html" target="_blank">Go to Class Page 5</a>
-        </div>
-        <!-- Add more class links as needed -->
-        <div class="class-link">
-            <a href="class-page6.html" target="_blank"><img src="images/pp.png" alt="Image 6"></a>
-            <a href="class-page6.html" target="_blank">Go to Class Page 6</a>
+            <a href="https://rrussianfairyy.github.io/Flavour-Files/" target="_blank"><img src="images/ll.png" alt="Image 5"></a> 
+            <a href="https://rrussianfairyy.github.io/Flavour-Files/" target="_blank">Alyssa</a>
         </div>
         <div class="class-link">
-            <a href="class-page7.html" target="_blank"><img src="images/hibib.png" alt="Image 7"></a>
-            <a href="class-page7.html" target="_blank">Go to Class Page 7</a>
+            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank"><img src="images/pp.png" alt="Image 6"></a>
+            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank">Lena</a>
         </div>
         <div class="class-link">
-            <a href="class-page8.html" target="_blank"><img src="images/kkkm.png" alt="Image 8"></a>
-            <a href="class-page8.html" target="_blank">Go to Class Page 8</a>
+            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank"><img src="images/hibib.png" alt="Image 7"></a>
+            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank">Lizzie</a>
         </div>
         <div class="class-link">
-            <a href="class-page9.html" target="_blank"><img src="images/Untitled-7.png" alt="Image 9"></a>
-            <a href="class-page9.html" target="_blank">Go to Class Page 9</a>
+            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank"><img src="images/kkkm.png" alt="Image 8"></a>
+            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank">Tai</a>
         </div>
         <div class="class-link">
-            <a href="class-page10.html" target="_blank"><img src="images/lpolp.png" alt="Image 10"></a>
-            <a href="class-page10.html" target="_blank">Go to Class Page 10</a>
+            <a href="https://gracekinii.github.io/Graces-site---How-to-gain-film-knowledge/Feature%203.html" target="_blank"><img src="images/Untitled-7.png" alt="Image 9"></a>
+            <a href="https://gracekinii.github.io/Graces-site---How-to-gain-film-knowledge/Feature%203.html" target="_blank">Grace</a>
         </div>
     </div>
-</body>
-</html>
+    <div class="container"> <!-- Third container -->
+        <div class="class-link">
+            <a href="https://setamushroom.github.io/Xiangyuasha-Silk/" target="_blank"><img src="images/pp.png" alt="Image 10"></a> 
+            <a href="https://setamushroom.github.io/Xiangyuasha-Silk/" target="_blank">Seta</a>
+        </div>
+        <div class="class-link">
+            <a href="https://nateskinnerr.github.io/" target="_blank"><img src="images/hib2 copy.png" alt="Image 11"></a>
+            <a href="https://nateskinnerr.github.io/" target="_blank">Nate</a>
+        </div>
+        <div class="class-link">
+            <a href="https://leosamson.github.io/leosamson.io/index.html" target="_blank"><img src="images/frangi copy.png" alt="Image 12"></a>
+            <a href="https://leosamson.github.io/leosamson.io/index.html" target="_blank">Leo</a>
+        </div>
+        <div class="class-link">
+            <a href="https://yttll.github.io/ytttl/" target="_blank"><img src="images/hib copy.png" alt="Image 13"></a>
+            <a href="https://yttll.github.io/ytttl/" target="_blank">Mark</a>
+        </div>
+    </div>
+    <div class="container"> <!-- Fourth container -->
+        <div class="class-link">
+            <a href="https://christi4n4.github.io/CHICHI/" target="_blank"><img src="images/ll.png" alt="Image 14"></a> 
+            <a href="https://christi4n4.github.io/CHICHI/" target="_blank">Christiana</a>
+        </div>
+        <div class="class-link">
+            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank"><img src="images/pp.png" alt="Image 15"></a>
+            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank">page</a>
+        </div>
+        <div class="class-link">
+            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank"><img src="images/hibib.png" alt="Image 16"></a>
+            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank">page</a>
+        </div>
+        <div class="class-link">
+            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank"><img src="images/kkkm.png" alt="Image 17"></a>
+            <a href="https://
