--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </div>
     <div class="container">
         <div class="class-link">
-            <a href="https://ss1mba.github.io/2theam/" target="_blank"><img src="images/hib copy.png" alt="Image 1"></a>
+            <a href="https://ss1mba.github.io/2theam/" target="_blank"><img src="images/ppppp.png" alt="Image 1"></a>
             <a href="https://ss1mba.github.io/2theam/" target="_blank">Stephanie</a>
         </div>
         <div class="class-link">
-            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank"><img src="images/okpokp.png" alt="Image 2"></a>
+            <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank"><img src="images/hib2 copy.png" alt="Image 2"></a>
             <a href="https://ramonabeepbop.github.io/noodle1/" target="_blank">Ramona</a>
         </div>
         <div class="class-link">
