--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank">Lizzie</a>
         </div>
         <div class="class-link">
-            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank"><img src="images/kkkm.png" alt="Image 8"></a>
-            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank">Tai</a>
+            <a href="https://t4ibrownnn.github.io/Wee/" target="_blank"><img src="images/kkkm.png" alt="Image 8"></a>
+            <a href="https://t4ibrownnn.github.io/Wee/" target="_blank">Tai</a>
         </div>
         <div class="class-link">
             <a href="https://gracekinii.github.io/Graces-site---How-to-gain-film-knowledge/Feature%203.html" target="_blank"><img src="images/Untitled-7.png" alt="Image 9"></a>
@@ -136,7 +136,7 @@
         </div>
         <div class="class-link">
             <a href="https://yttll.github.io/ytttl/" target="_blank"><img src="images/hib copy.png" alt="Image 13"></a>
-            <a href="https://yttll.github.io/ytttl/" target="_blank">Mark</a>
+            <a href="https://yttll.github.io/ytttl/ target="_blank">Mark</a>
         </div>
     </div>
     <div class="container"> <!-- Fourth container -->
@@ -145,13 +145,13 @@
             <a href="https://christi4n4.github.io/CHICHI/" target="_blank">Christiana</a>
         </div>
         <div class="class-link">
-            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank"><img src="images/pp.png" alt="Image 15"></a>
-            <a href="https://lenacrafter.github.io/Dev-1/" target="_blank">page</a>
+            <a href="https://brooklyn62639.github.io/Brooklyns-Emotes/" target="_blank"><img src="images/pp.png" alt="Image 15"></a>
+            <a href="https://brooklyn62639.github.io/Brooklyns-Emotes/" target="_blank">Brooklyn</a>
         </div>
         <div class="class-link">
-            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank"><img src="images/hibib.png" alt="Image 16"></a>
-            <a href="https://bigfatfish8.github.io/bigfatrepo/" target="_blank">page</a>
+            <a href="https://bianca-tt.github.io/rawr/" target="_blank"><img src="images/hibib.png" alt="Image 16"></a>
+            <a href="https://bianca-tt.github.io/rawr/" target="_blank">B</a>
         </div>
         <div class="class-link">
             <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank"><img src="images/kkkm.png" alt="Image 17"></a>
-            <a href="https://
+            <a href="https://t4ibrownnn.github.io/Meow-3/" target="_blank">page</a>
